#include <ftxui/dom/elements.hpp>
#include <fstream> 
#include <string>

using namespace std;
using namespace ftxui;

class Arena
{
private:
    string arena_Style;
    int bamboo_Quantity;

public:
    Arena(/* args */);
    ~Arena();
};

