#include <ftxui/dom/elements.hpp>
#include <fstream> 
#include <string>

using namespace std;
using namespace ftxui;

class Atravesable
{
private:
    bool atravesable;
public:
    Atravesable(/* args */);
    ~Atravesable();
};


