#include <ftxui/dom/elements.hpp>
#include <fstream> 
#include <string>

using namespace std;
using namespace ftxui;

class Colisionable
{
private:
    bool colisonable;
public:
    Colisionable(/* args */);
    ~Colisionable();
};

