#include <ftxui/dom/elements.hpp>
#include <fstream> 
#include <string>

using namespace std;
using namespace ftxui;

class Espada
{
private:
    int xpos;
    int ypos;
public:
    Espada(/* args */);
    ~Espada();
};

