#include <ftxui/dom/elements.hpp>
#include <fstream> 
#include <string>

using namespace std;
using namespace ftxui;

class Juego
{
private:
    bool gameOver;
public:
    Juego(/* args */);
    ~Juego();
};


