#include <ftxui/dom/elements.hpp>
#include <fstream> 
#include <string>

using namespace std;
using namespace ftxui;

class Jugador
{
private:
    int xpos;
    int ypos;
    string (color);
public:
    Jugador(/* args */);
    ~Jugador();
};

