#include <ftxui/dom/elements.hpp>
#include <fstream> 
#include <string>

using namespace std;
using namespace ftxui;

class Piso
{
private:
    /* data */
public:
    Piso(/* args */);
    ~Piso();
};


